--- a/videos/DocumentriesAndMovies.html
+++ b/videos/DocumentriesAndMovies.html
@@ -19,7 +19,7 @@
 					<div class="inner">
 						<header>
 							<h1>DOCUMENTRIES AND MOVIES</h1>
-							<p>This sections include the lectures of varous sheikhs<br />
+							<p>Browse through Historic movies and documentrires<br />
 							
 						</header>
 						<a href="#main" class="more">Learn More</a>
@@ -32,6 +32,19 @@
 
 					<!-- Boxes -->
 						<div class="thumbnails">
+
+
+							<div class="box">
+								<a href="https://youtu.be/yQMYZdM2HBA?si=QscFD10PffqP61nH" class="image fit"><img src="https://img.youtube.com/vi/sVvv8jfruzI/maxresdefault.jpg
+
+
+									" alt="" /></a>
+								<div class="inner">
+									<h3>Kingdom of Heaven (2005) Movie</h3>
+									<p>The Crussaders and the muslims' Salahaddin Ayyubi'''- Hollywood English Movie | Classic Hollywood War Action Full Movies</p>
+									<a href="https://youtu.be/yQMYZdM2HBA?si=QscFD10PffqP61nH" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
 
 							<div class="box">
 								<a href="https://youtu.be/mdiViGvY5xQ?si=QUpRtZrnfy7ruYo4" class="image fit"><img src="https://img.youtube.com/vi/mdiViGvY5xQ/maxresdefault.jpg" alt="" /></a>
@@ -106,6 +119,18 @@
 							</div>
 
 							<div class="box">
+								<a href="https://youtu.be/vqddAGgKGGs?si=UVV6h3z74r63Z9nP" class="image fit"><img src="https://img.youtube.com/vi/vqddAGgKGGs/maxresdefault.jpg
+									" alt="" /></a>
+								<div class="inner">
+									<h3>The Life of Emperor Justinian - Vol 1-9 - The History of Byzantium</h3>
+									<p>The Roman Empire had many emperors. Justinian was perhaps one of the most enigmatic. He created a law code, sponsored a massive building campaign, survived the plague, and restored the empire more than any in his time. Yet, despite that he was regarded as setting up his civilization for a major fall. In this video we cover the life of Emperor Justinian - from humble beginnings to impactful end. 
+									</p>
+									<a href="https://youtu.be/vqddAGgKGGs?si=UVV6h3z74r63Z9nP" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+
+							<div class="box">
 								<a href="https://youtu.be/sosVfruR9bY?si=1FT2wWzDHZaatZEh" class="image fit"><img src="https://img.youtube.com/vi/sosVfruR9bY/maxresdefault.jpg
 									" alt="" /></a>
 								<div class="inner">
@@ -125,6 +150,16 @@
 								</div>
 							</div>
 
+							<div class="box">
+								<a href="https://youtu.be/6MVz5MBNqsw?si=LJVZ51OsPlGWnpQ-" class="image fit"><img src="https://img.youtube.com/vi/6MVz5MBNqsw/maxresdefault.jpg
+									" alt="" /></a>
+								<div class="inner">
+									<h3>Did the British Start the Israel-Palestine Conflict? - History Documentary</h3>
+									<p>With the Israel-Palestine conflict dominating the news, Spartacus and Sebastian bring you an in depth look at its history. It’s a millennia long story beginning in the time of the Crusades and culminating in Israeli independence and war with its Arab neighbours. </p>
+									<a href="https://youtu.be/6MVz5MBNqsw?si=LJVZ51OsPlGWnpQ-" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
 
 							<div class="box">
 								<a href="https://youtu.be/T4zh17YEfxQ?si=pN9CqG4WdTrdNx78" class="image fit"><img src="https://img.youtube.com/vi/T4zh17YEfxQ/maxresdefault.jpg
@@ -137,23 +172,44 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/AKFu2-TNeG8?si=ZVoOhFPoFoGik1U1" class="image fit"><img src="https://img.youtube.com/vi/xXAdfgwL9YM/maxresdefault.jpg
+								<a href="https://youtu.be/pDGQm7JeKMY" class="image fit"><img src="https://img.youtube.com/vi/xXAdfgwL9YM/maxresdefault.jpg
 									" alt="" /></a>
 								<div class="inner">
 									<h3>ROBIN HOOD </h3>
 									<p>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown in a thrilling action-adventure packed with gritty battlefield exploits, mind-blowing fight choreography.</p>
-									<a href="https://youtu.be/AKFu2-TNeG8?si=ZVoOhFPoFoGik1U1" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/pDGQm7JeKMY" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
 							<div class="box">
 								<a href="https://youtu.be/9Qak7Gux1gc?si=F8ZUBxnn5Y493SxM" class="image fit"><img src="https://img.youtube.com/vi/-JWxIVVeV98/maxresdefault.jpg
-
 									" alt="" /></a>
 								<div class="inner">
 									<h3>ATOMIC BOMBING OF HIROSHIMA DOCUMENTARY </h3>
 									<p>From 1941 to 1945, America was at War with Japan. It started with a surprise attack on Pearl Harbour and it ended with the detonation of 2 atomic bombs. Between these two events countless soldiers and civilians were killed in some of the most brutal fighting of WW2. ,J Robert Oppenheimer and other key figures involved in the decision to drop the first atomic bomb discuss their motivations in this rare NBC News documentary.  Originally produced two decades after the bombings of Hiroshima and Nagasaki, this presentation features new insight from NBC News Presidential His.</p>
 									<a href="https://youtu.be/-JWxIVVeV98?si=k1HUDVJrw2iGHO3j" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/G1p6rlDCxq0?si=LiaAUTRE6CrCO_AY" class="image fit"><img src="https://img.youtube.com/vi/G1p6rlDCxq0/maxresdefault.jpg
+									" alt="" /></a>
+								<div class="inner">
+									<h3>World War One, DOCUMENTARY </h3>
+									<p>World War One in one place. From the Schlieffen Plan to the Versailles Treaty, a global history of the entire conflict.</p>
+									<a href="https://youtu.be/G1p6rlDCxq0?si=LiaAUTRE6CrCO_AY" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							
+							<div class="box">
+								<a href="https://youtu.be/5guiUrgcblM?si=R3sQYn16ULjsyWwQ" class="image fit"><img src="https://img.youtube.com/vi/5guiUrgcblM/maxresdefault.jpg
+
+									" alt="" /></a>
+								<div class="inner">
+									<h3>The Danger of AI | Scary Technology | Artificial Intelligence | Documentary </h3>
+									<p>The Danger of AI - An examination of an alternative means to accurately poll for political opinions through an artificial intelligence program named Polly</p>
+									<a href="https://youtu.be/5guiUrgcblM?si=R3sQYn16ULjsyWwQ" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
