--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
 
             
             <div class="blogs">
-                    <a href="" style="clear:both;"> <img src="images/articles.jpg" alt="Blogs" width="100%"></a>
-                    <button class="btn" onclick="blogLink">BLOGS</button>  
+                    <a href="https://thinkofgh.blogspot.com" style="clear:both;"> <img src="images/articles.jpg" alt="Blogs" width="100%"></a>
+                    <button class="btn" onclick="blogLink()">BLOGS</button>  
                     <script>
                         function blogLink() {
-                            window.location.href = "videos/videoG.html";
+                            window.location.href = "https://iagepiclight.wixsite.com/iaglearn";
                         }
                     </script>                  
             </div>
 
 
             <div class="articles">
-                    <a href="#" style="clear:both;"> <img src="images/articles.jpg" alt="Articles" width="100%"></a>
+                    <a href="https://www.islamicpublishing.org/articles/en" style="clear:both;"> <img src="images/articles.jpg" alt="Articles" width="100%"></a>
                     <button class="btn">ARTICLES</button> 
             </div>
         
@@ -118,7 +118,7 @@
              <div class="audios">
                 <a href="https://muslimcentral.com/" style="clear:both;"> <img src="images/blogs.jpg"
                         alt="Audios" width="100%"></a>
-                <button class="btn" onclick="openAudioModal()">ISLAMIC AUDIOS</button>
+                <button class="btn" onclick="openAudioModal()">AUDIOS+</button>
             </div>
             <!-- Modal content -->
             <div id="audioModal" class="modal">
@@ -154,7 +154,7 @@
             </div>
 
             <audio autoplay class="ai">
-                <source src="sami.mp3" type="audio/mp3">
+                <source src="omar.mp3" type="audio/mp3">
                 d
             </audio>
         </section>
