--- a/videos/Academia.html
+++ b/videos/Academia.html
@@ -52,7 +52,7 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/2F_KH_cs6RY?si=kmkqecEPtNwsqfeh" class="image fit"><img src="https://img.youtube.com/vi/2F_KH_cs6RY/maxresdefault.jpg
+								<a href="https://youtu.be/2F_KH_cs6RY?si=kmkqecEPtNwsqfeh" class="image fit"><img src="/images/video_image.jpg
 									" alt="" /></a>
 								<div class="inner">
 									<h3>Features of Academic Writing</h3>
@@ -93,11 +93,29 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="https://youtu.be/ouUaxWVJNSI?si=SsNwYNlSYoHOYEeW" class="image fit"><img src="/images/video_image.jpg" alt="" /></a>
 								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/HyUYNxIghT4?si=cUPashuj33lHmEfO" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<h3>College Algebra Introduction</h3>
+									<p>College Algebra Introduction Review - Basic Overview, Study Guide, Examples & Practice Problems</p>
+									<a href="https://youtu.be/ouUaxWVJNSI?si=SsNwYNlSYoHOYEeW" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/TEqYnV6KWfY?si=P_tV9XdRDUl0gfsr" class="image fit"><img src="https://i.ytimg.com/vi/TEqYnV6KWfY/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLAnBsRJiKmK_KtJWoYaYdbGPk0kGw" alt="" /></a>
+								<div class="inner">
+									<h3>Research Methodology </h3>
+									<p>Research Methodology 101: Simple Explainer With Examples (+ FREE Template)</p>
+									<a href="https://youtu.be/TEqYnV6KWfY?si=P_tV9XdRDUl0gfsr" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/302eJ3TzJQU?si=P9xDwx21pM8dhofA" class="image fit"><img src="/images/video_image.jpg" alt="" /></a>
+								<div class="inner">
+									<h3>Introduction to Geometry</h3>
+									<p>This video tutorial provides a basic introduction into geometry.- Basic Overview, Study Guide, Examples & Practice Problems</p>
+									<a href="https://youtu.be/302eJ3TzJQU?si=P9xDwx21pM8dhofA" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
