--- a/videos/DocumentriesAndMovies.html
+++ b/videos/DocumentriesAndMovies.html
@@ -2,19 +2,10 @@
 
 <html>
 	<head>
-		<title>Documenties And Movies</title>
+		<title>Documenties And Movies.epic light</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-
-		<script>
-			function popupVideo(videoID) {
-				var popupVideo = 'https://www.youtube.com/embed/' + videoID + '?autoplay=1'
-				window.open(popupVideo, 'Video Popup', 'width= 800, height= 600, scrollbars=no, resizable=no')
-			}
-	
-		</script>
-
 	</head>
 	<body id="top">
 
@@ -42,16 +33,14 @@
 					<!-- Boxes -->
 						<div class="thumbnails">
 
-
+							
 							<div class="box">
-								<a href="https://youtu.be/yQMYZdM2HBA?si=QscFD10PffqP61nH" class="image fit"><img src="https://img.youtube.com/vi/sVvv8jfruzI/maxresdefault.jpg
-
-
+								<a href="https://youtu.be/yQMYZdM2HBA" class="image fit"><img src="https://img.youtube.com/vi/sVvv8jfruzI/maxresdefault.jpg
 									" alt="" /></a>
 								<div class="inner">
 									<h3>Kingdom of Heaven (2005) Movie</h3>
 									<p>The Crussaders and the muslims' Salahaddin Ayyubi'''- Hollywood English Movie | Classic Hollywood War Action Full Movies</p>
-									<a href="https://youtu.be/yQMYZdM2HBA?si=QscFD10PffqP61nH" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/LkBLD0LAAzY?si=wdzK8W39fS6vtpuu" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
@@ -91,6 +80,15 @@
 									<h3>Lawrence Of Arabia 1962</h3>
 									<p>Lawrence of Arabia: A superlative cinematic achievement portraying the real-life exploits of TE Lawrence. That ZMC's version has only 7k views over in three years is a testament to viewers' desire to screen at the highest possible res. .</p>
 									<a href="https://youtu.be/RVwLbgyO_lI?si=-yFS0IjelU8MquPS" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/pLlKMFJDUdg?si=HJewwjp4cdnL-qbV" class="image fit"><img src="https://img.youtube.com/vi/pLlKMFJDUdg/default.jpg" alt="" /></a>
+								<div class="inner">
+									<h3>CIA|intelligence|</h3>
+									<p>CIA|intelligence| swat special forces| action movie full in English portraying the real-life exploits of TE Lawrence. That ZMC's version has only 7k views over in three years is a testament to viewers' desire to screen at the highest possible res. .</p></p>
+									<a href="https://youtu.be/pLlKMFJDUdg?si=HJewwjp4cdnL-qbV" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
@@ -181,23 +179,16 @@
 							</div>
 
 							<div class="box">
-								<a href="" class="image fit"><img src="https://img.youtube.com/vi/xXAdfgwL9YM/maxresdefault.jpg " alt="" /></a>
+								<a href="https://youtu.be/pDGQm7JeKMY" class="image fit"><img src="https://img.youtube.com/vi/xXAdfgwL9YM/maxresdefault.jpg
+									" alt="" /></a>
 								<div class="inner">
 									<h3>ROBIN HOOD </h3>
 									<p>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown in a thrilling action-adventure packed with gritty battlefield exploits, mind-blowing fight choreography.</p>
-								   <button class="button fit" onclick="popupVideo('pDGQm7JeKMY')">Watch</button>
+									<a href="https://youtu.be/pDGQm7JeKMY" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
-							<div class="box">
-								<a href="https://youtu.be/9Qak7Gux1gc?si=F8ZUBxnn5Y493SxM" class="image fit"><img src="https://img.youtube.com/vi/-JWxIVVeV98/maxresdefault.jpg
-									" alt="" /></a>
-								<div class="inner">
-									<h3>ATOMIC BOMBING OF HIROSHIMA DOCUMENTARY </h3>
-									<p>From 1941 to 1945, America was at War with Japan. It started with a surprise attack on Pearl Harbour and it ended with the detonation of 2 atomic bombs. Between these two events countless soldiers and civilians were killed in some of the most brutal fighting of WW2. ,J Robert Oppenheimer and other key figures involved in the decision to drop the first atomic bomb discuss their motivations in this rare NBC News documentary.  Originally produced two decades after the bombings of Hiroshima and Nagasaki, this presentation features new insight from NBC News Presidential His.</p>
-									<a href="https://youtu.be/-JWxIVVeV98?si=k1HUDVJrw2iGHO3j" class="button fit" data-poptrox="youtube,800x400">Watch</a>
-								</div>
-							</div>
+							
 
 							<div class="box">
 								<a href="https://youtu.be/G1p6rlDCxq0?si=LiaAUTRE6CrCO_AY" class="image fit"><img src="https://img.youtube.com/vi/G1p6rlDCxq0/maxresdefault.jpg
