--- a/index.html
+++ b/index.html
@@ -153,10 +153,6 @@
                 </script>
             </div>
 
-            <audio autoplay class="ai">
-                <source src="omar.mp3" type="audio/mp3">
-                d
-            </audio>
         </section>
 
 
@@ -197,6 +193,7 @@
          </script>
 
 					</div>
+                    <a href="test.html">TEST</a>
                     
 				</footer>
 
